fixed alignment of background image for carousel holder on landing page

--- a/react-app/src/components/auth/Landing.css
+++ b/react-app/src/components/auth/Landing.css
@@ -6,25 +6,24 @@
 
 .carousel-holder {
     height: 600px;
-    width: 460px;
-    background-position: center;
+    width: 440px;
     background-size: 95%;
     background-repeat: no-repeat;
     position: relative;
 }
 
 .carousel {
-    height: 73.5%;
+    height: 68%;
     width: 50%;
     border: 1px solid rgba(212, 212, 212, 0.295);
     position: absolute;
-    right: 57px;
+    right: 65px;
     top: 72px;
 }
 
 .carousel-image {
     width: 100%;
-    height: 437px;
+    /* height: 430px; */
 }
 
 .or-divider {
